# Sonium

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  install.sh  sonium-server.service  sonium-state.json  test_audio.rs  test_median  test_median.rs  users.json
.github/workflows/: ci.yml  docs.yml  release.yml
client/: Cargo.toml
client-gui/: package-lock.json  package.json
client-gui/src/: App.vue  index.css
client-gui/src-tauri/: Cargo.toml  tauri.conf.json
client-gui/src-tauri/icons/: icon.icns
client-gui/src-tauri/src/: lib.rs
client/examples/: test_audio_2.rs
client/src/: controller.rs  decoder.rs  eq.rs  lib.rs  main.rs  player.rs  setup.rs
contrib/macos/: com.sonium.client.plist
contrib/systemd/: sonium-client@.service
crates/codec/: Cargo.toml
crates/codec/src/: aac.rs  flac.rs  lib.rs  opus.rs  pcm.rs  traits.rs  vorbis.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  sample_format.rs
crates/control/: Cargo.toml
crates/control/src/: api.rs  auth.rs  auth_api.rs  config_api.rs  discovery.rs  lib.rs  persistence.rs  state.rs  system_api.rs  ws.rs
crates/control/tests/: api.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: header.rs  lib.rs  wire.rs
crates/protocol/src/messages/: client_info.rs  codec_header.rs  error.rs  group_sync.rs  health_report.rs  hello.rs  mod.rs  server_settings.rs  time.rs  wire_chunk.rs
crates/protocol/tests/: protocol_wire.rs
crates/sync/: Cargo.toml
crates/sync/src/: buffer.rs  lib.rs  time_provider.rs  time_source.rs
crates/sync/tests/: jitter_loopback.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs  rtp.rs  sender.rs
docs/: book.toml  package-lock.json  package.json
docs/src/: SUMMARY.md  index.md  introduction.md
docs/src/.vitepress/: config.ts
docs/src/.vitepress/theme/: style.css
docs/src/architecture/: buffer-stability-plan.md  overview.md  pipeline.md  sync.md  tcp-baseline-profiles.md  transport-migration-plan.md  ui-redesign.md  web-ui.md  workspace.md
docs/src/contributing/: dev-setup.md  roadmap.md
docs/src/getting-started/: configuration.md  installation.md  quick-start.md
docs/src/reference/: api.md  config.md  protocol.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_codec_header/: flac  opus  pcm  unknown_codec
fuzz/corpus/fuzz_message_parser/: error_msg  hello  server_settings  time_request  wire_chunk
fuzz/corpus/fuzz_wire_chunk/: length_mismatch  max_ramp  silence_1920  silence_960
fuzz/src/: fuzz_codec_header.rs  fuzz_message_parser.rs  fuzz_wire_chunk.rs
run/: sonium-dev.zzVWth  sonium-state.json  sonium.toml  users.json
scratch/: test_argon2.rs  test_auth.rs  test_config.rs  test_offset.rs
scripts/: capture_tcp_baseline.sh  sync-version.js
server/: Cargo.toml
server/src/: broadcaster.rs  config.rs  control_server.rs  encoder.rs  main.rs  metrics.rs  session.rs  streamreader.rs
tests/loopback/: README.md  generate_click.sh
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/assets/: main.css
web/src/components/: ClientCard.vue  ConnectionStatus.vue  EqControl.vue  ExpertToggle.vue  GroupCard.vue  HealthStatus.vue  LevelMeter.vue  NewGroupModal.vue  StreamBadge.vue  SyncIndicator.vue  Toast.vue  VolumeControl.vue
web/src/layouts/: AppLayout.vue
web/src/lib/: api.ts  toast.ts
web/src/router/: index.ts
web/src/stores/: auth.ts  server.ts
web/src/views/: AdminView.vue  ControlView.vue  DashboardView.vue  HomeView.vue  LoginView.vue  MatrixView.vue  NotFoundView.vue  PasswordChangeView.vue  SyncMonitorView.vue
web/src/views/admin/: ClientsTab.vue  ConfigTab.vue  DashboardTab.vue  GroupsTab.vue  HealthTab.vue  StreamsTab.vue  SystemTab.vue  UsersTab.vue
