[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/sync",
    "crates/codec",
    "crates/common",
    "crates/control",
    "server",
    "client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes       = "1"
thiserror   = "1"
anyhow      = "1"
rubato      = "0.15"
audiopus    = "0.2"
claxon      = "0.4"
mdns-sd     = "0.11"
axum        = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
toml        = "0.8"
uuid        = { version = "1", features = ["v4"] }
chrono      = { version = "0.4", features = ["serde"] }
