[package]
name = "sonium-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sonium-client"
path = "src/main.rs"

[dependencies]
sonium-common   = { path = "../crates/common" }
sonium-protocol = { path = "../crates/protocol" }
sonium-codec    = { path = "../crates/codec" }
sonium-sync     = { path = "../crates/sync" }
sonium-control  = { path = "../crates/control" }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
toml            = { workspace = true }
bytes           = { workspace = true }
parking_lot     = "0.12"
hostname        = "0.4"
clap            = { workspace = true }
cpal            = { workspace = true }
thread-priority = "3.0.0"
