[package]
name = "sonium-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sonium-client"
path = "src/main.rs"

[lib]
name = "sonium_client_lib"
path = "src/lib.rs"

[dependencies]
sonium-common    = { path = "../crates/common" }
sonium-protocol  = { path = "../crates/protocol" }
sonium-codec     = { path = "../crates/codec" }
sonium-sync      = { path = "../crates/sync" }
sonium-control   = { path = "../crates/control" }
sonium-transport = { path = "../crates/transport" }
tokio           = { workspace = true }
socket2         = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
toml            = { workspace = true }
bytes           = { workspace = true }
parking_lot     = "0.12"
hostname        = "0.4"
clap            = { workspace = true }
cpal            = { workspace = true }
thread-priority = "3.0.0"
dialoguer = "0.12.0"
console = "0.16.3"
sudo = "0.6.0"
dirs = "6.0.0"
