[package]
name = "sonium-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sonium-server"
path = "src/main.rs"

[dependencies]
sonium-common     = { path = "../crates/common" }
sonium-protocol   = { path = "../crates/protocol" }
sonium-codec      = { path = "../crates/codec" }
sonium-sync       = { path = "../crates/sync" }
sonium-control    = { path = "../crates/control" }
sonium-transport  = { path = "../crates/transport" }
tokio           = { workspace = true }
socket2         = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
toml            = { workspace = true }
bytes           = { workspace = true }
parking_lot     = "0.12"
axum            = { workspace = true }
uuid            = { workspace = true }
hostname        = "0.4"
local-ip-address = "0.6.1"
clap            = { workspace = true }
rust-embed      = { workspace = true }
mime_guess      = { workspace = true }
tokio-util   = "0.7.18"
prometheus   = { version = "0.13", default-features = false }
lazy_static  = "1.5"
notify       = "6.1"
