[package]
name = "sonium-codec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sonium-common   = { path = "../common" }
sonium-protocol = { path = "../protocol" }
thiserror       = { workspace = true }
bytes           = { workspace = true }
audiopus        = { workspace = true }
claxon          = { workspace = true }
flacenc         = { workspace = true }
