[package]
name = "sonium-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
toml            = { workspace = true }
sonium-transport = { path = "../transport" }
