[package]
name = "sonium-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sonium-common = { path = "../common" }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
bytes         = { workspace = true }
