[package]
name = "sonium-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sonium-common = { path = "../common" }
thiserror     = { workspace = true }
rubato        = { workspace = true }
parking_lot   = "0.12"
sonium-protocol = { version = "0.1.61", path = "../protocol" }
